--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,3 +1,15 @@
-<view>
-  Hello Word！
+<view class='header'>
+  <view class='localtion'>
+    济南
+  </view>
+  <view class='search'>
+    <view class='word'>搜索感兴趣的东西~</view>
+  </view>
+</view>
+<view class='banner'>
+  <swiper autoplay indicator-dots circular>
+    <swiper-item wx:for='{{banners}}' wx:key='id'>
+      <image src='{{item.url}}' mode='widthFix' />
+    </swiper-item>
+  </swiper>
 </view>
