--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -22,6 +22,14 @@
   position: relative;
 }
 
+.header .search .iconsearch {
+  color: rgb(150, 148, 148);
+  position: absolute;
+  font-size: 26rpx;
+  line-height: 49rpx;
+  margin-left: 14rpx;
+}
+
 .header .search .word {
   color: rgb(150, 148, 148);
   font-size: 26rpx;
