--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -12,6 +12,12 @@
   <banner data='{{banners}}' />
 </view>
 
+<view class='tab' bind:tap='handleToggleListType'>
+  <view class='{{listType === 0 ? "tab-active" : ""}}' data-type='0'>全部</view>
+  <view class='{{listType === 1 ? "tab-active" : ""}}' data-type='1'>个人赛</view>
+  <view class='{{listType === 2 ? "tab-active" : ""}}' data-type='2'>团队赛</view>
+</view>
+
 <view class='event-list'>
   <view class='event-list-item' wx:for='{{eventList}}' wx:key='id' bind:tap='enterEventDetails' data-id='{{item.id}}'>
     <view class='left'>
