--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -41,6 +41,42 @@
   margin-top: 80rpx;
 }
 
+.tab {
+  height: 80rpx;
+  background-color: #fff;
+  position: sticky;
+  top: 80rpx;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  padding: 0 40rpx;
+  box-sizing: border-box;
+}
+
+.tab view {
+  flex: 1;
+  height: 80rpx;
+  line-height: 80rpx;
+  font-size: 28rpx;
+  text-align: center;
+}
+
+.tab-active {
+  color: #3ac035;
+  position: relative;
+}
+
+.tab-active::after {
+  content: '';
+  width: 50%;
+  height: 4rpx;
+  background-color: #3ac035;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .event-list {
   margin-top: 15rpx;
 }
