--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -53,7 +53,7 @@
   box-sizing: border-box;
 }
 
-.tab view {
+.tab .tab-item {
   flex: 1;
   height: 80rpx;
   line-height: 80rpx;
@@ -79,58 +79,4 @@
 
 .event-list {
   margin-top: 15rpx;
-}
-
-.event-list .event-list-item {
-  display: flex;
-  border-bottom: 1px solid rgb(245, 245, 245);
-  padding: 0 20rpx 20rpx 20rpx;
-  box-sizing: border-box;
-  margin-bottom: 20rpx;
-}
-
-.event-list .event-list-item .event-title {
-  font-size: 28rpx;
-  font-weight: 500;
-  display: -webkit-box;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-}
-
-.event-list .event-signup {
-  display: flex;
-  color: orange;
-  font-size: 26rpx;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-
-.event-list .event-signup .button {
-  font-size: 24rpx;
-  padding: 2rpx 25rpx;
-  background-color: rgb(250, 240, 221);
-  border: 1rpx solid orange;
-  border-radius: 4rpx;
-}
-
-.event-list .right .event-content {
-  flex: 1;
-  color: #c0bdbd;
-  font-size: 24rpx;
-  margin: 10rpx 0;
-}
-
-.event-list .right {
-  flex: 1;
-  margin-left: 14rpx;
-  display: flex;
-  flex-direction: column;
-}
-
-.event-list .left image {
-  width: 370rpx;
-  height: 220rpx;
-  display: block;
 }
