feat: 修复小程序 tab 组件的吸顶问题

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -12,12 +12,13 @@
   <banner data='{{banners}}' />
 </view>
 
-<tab
-  class='tab'
-  tabs='{{["全部", "个人赛", "团队赛"]}}'
-  active-index='{{listType}}'
-  bind:change='handleToggleListType'
-/>
+<view class='tab'>
+  <tab
+    tabs='{{["全部", "个人赛", "团队赛"]}}'
+    active-index='{{listType}}'
+    bind:change='handleToggleListType'
+  />
+</view>
 
 <view class='event-list'>
   <block wx:for='{{eventList}}' wx:key='id'>
